data/all_generated_tests/raw_wast_tests/unreachable_EdgeCaseFailuresinbr_table_1615.wast
;; 6. **Test Description:**     A `br_table` instruction with its index controlled by a non-integer stack value (e.g., float) that falls out of bounds, immediately followed by `unreachable` intended to detect type mismatches leading to traps.    **Constraint Checked:** Validates handling of type conversion issues and out-of-bounds indices leading to traps.    **Edge Case Relation:** Ensures non-integer indices in `br_table` lead to consistent traps.

(assert_invalid
  (module (func $unreachable_with_br_table_out_of_bounds
    (block
      (block
        (f32.const 0)
        (br_table 0 0)
        (unreachable)
      )
    )
  ))
  "type mismatch"
)